--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": " NODE_ENV=DEVELOPMENT  nodemon server.js",
-    "prod": " NODE_ENV=PRODUCTION  nodemon server.js"
+    "dev": "SET NODE_ENV=DEVELOPMENT  && nodemon server.js",
+    "prod": "SET NODE_ENV=PRODUCTION &&  nodemon server.js"
   },
   "keywords": [],
   "author": "",
