--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "SET NODE_ENV=DEVELOPMENT  && nodemon server.js",
-    "prod": "SET NODE_ENV=PRODUCTION &&  nodemon server.js"
+    "dev": "set NODE_ENV=DEVELOPMENT &&   nodemon server.js",
+    "prod": "set NODE_ENV=PRODUCTION &&  nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,7 @@
     "cron": "^3.1.8",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "http-proxy-middleware": "^3.0.3",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
@@ -30,5 +31,8 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "puppeteer": "^23.6.1"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.0"
   }
 }
